<resources>
    <string name="app_name">Smash Ask</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="entar">Entrar</string>
    <string name="criarConta">Criar Conta</string>
    <string name="Smash">SMASH</string>
    <string name="pref_Key">dados</string>

    <string name="telaCriarUsuario">Criar Usuário</string>
    <string name="nome">Nome:</string>
    <string name="salvar">Salvar</string>

    <string name="insertCodgo">Códgo da Lista</string>
    <string name="aleatoria">Lista Aleatoria</string>

    <string name="smashS">Smash Study</string>
    <string name="smashT">Smash Test</string>

    <string name="perguntaN">Pergunta 1/25</string>
    <string name="timer">60s</string>

    <string name="btnCriarUsuario">Criar Usuário</string>

    <string name="pergunta">Para assegurar a autenticidade das interações entre seu aplicativo e o Facebook, você deverá nos enviar o hash de chave para Android do seu ambiente de desenvolvimento. Se o seu aplicativo já tiver sido publicado, você deverá adicionar também seu hash de chave de lançamento. </string>
    <string name="botaoA">A)</string>
    <string name="botaoB">B)</string>
    <string name="botaoC">C)</string>
    <string name="botaoD">D)</string>
    <string name="respostaA">Insira a opção de resposta A</string>
    <string name="respostaB">Insira a opção de resposta B</string>
    <string name="respostaC">Insira a opção de resposta C</string>
    <string name="respostaD">Insira a opção de resposta D</string>
    <string name="Ipergunta">Insira a Pergunta.</string>
    <string name="setTimer">Defina o timer dessa pergunta:</string>

    <string name="salvarP">Salvar pergunta</string>
    <string name="botaoEntrarCodigo">Verificar Código</string>
    <string name="setCorreta">Selecione a resposta correta:</string>
    <string name="tamlista">Insira o tamanho de sua lista com até 20 perguntas</string>
    <string name="novaLista">Nova Lista:</string>
    <string name="criarNovaLista">Criar nova lista</string>
    <string name="criarNovaPergunta">Criar nova pergunta</string>
    <string name="selecionePerguntas">Selecione as perguntas que deseja inserir na lista:</string>


</resources>
